--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,7 +34,7 @@
             </li>
             <li>
               <span>View Previously Uploaded PO</span>
-              <a href="#"><img src="images/dv.png"/></a>
+              <a href="/savedPOPage"><img src="images/dv.png"/></a>
             </li>
           </ul>
         </div>
