--- a/views/common/head.ejs
+++ b/views/common/head.ejs
@@ -12,7 +12,7 @@
     </title>
 
     <!-- Bootstrap core CSS -->
-    <link href="stylesheets/bootstrap.min.css" rel="stylesheet">
+    <link href="/stylesheets/bootstrap.min.css" rel="stylesheet">
     <style>
         html {
             position: relative;
