--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -83,11 +83,13 @@ code {
 }
 
 #dock-container {
-    position: fixed;
+    position: relative;
     text-align: center;
     background: rgba(255,255,255,0.2);
-    border-radius: 10px 10px 0 0;
-    height: 300px;
+    /* border-radius: 10px 10px 0 0; */
+    /* height: 300px; */
+    height:75%;
+    width:75%;
   }
   #dock-container li {
     list-style-type: none;
