--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,8 +13,14 @@
 
     <!-- Begin page content -->
     <main role="main" class="container">
-      <h1 class="mt-5">Welcome to the purchase order filling form.</h1>
-      <p class="lead">This Portal can only be used using the IIT Ropar Email Account.</p>
+      <div class="jumbotron mt-3">
+        <h1 class="display-5">ICSR, IIT Ropar</h1>
+        <p class="lead">Welcome to the Purchase Order Filing Site.</p>
+        <hr class="my-4">
+        <p>This portal can only be accessed using IIT Ropar Email ID.</p>
+      </div>
+
+      
 
       <!-- <div class="row">
         <div class="col-6">
@@ -24,7 +30,7 @@
           <a href="#" class="btn btn-secondary btn-lg">View Previously Uploaded PO</a>
         </div>
       </div> -->
-    <div class="container h-100">
+      <div class="container">
       <div id="dock-container">
         <div id="dock">
           <ul>
@@ -33,16 +39,17 @@
               <a href="/uploadPage"><img src="images/du1.png"/></a>
             </li>
             <li>
-              <span>View Previously Uploaded PO</span>
+              <span>View Saved PO</span>
               <a href="/savedPOPage"><img src="images/dv.png"/></a>
             </li>
           </ul>
         </div>
-        <% if(user) { %>
-        <iframe class="mt-4 w-100 h-100" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQp2z0stPhyH256UltThLB9LHid42QALok4sBIQOx8GSBgAzKM5KAkzgJtKzaaOAcfj8MopDYDOqWo_/pubhtml?gid=0&amp;widget=true&amp;headers=false"></iframe>
-          <% } %>
+        
       </div>
     </div>
+      <% if(user) { %>
+        <iframe class="mt-4 w-100" style="height:200px" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQp2z0stPhyH256UltThLB9LHid42QALok4sBIQOx8GSBgAzKM5KAkzgJtKzaaOAcfj8MopDYDOqWo_/pubhtml?gid=0&amp;widget=true&amp;headers=false"></iframe>
+          <% } %>
     </main>
     
     <%- include('./common/footer') %>
