Added PDF Viewing in Save and Continue Page

--- a/views/common/navbar.ejs
+++ b/views/common/navbar.ejs
@@ -21,7 +21,7 @@
       </ul>
     </div>
     <% if(user) { %>
-      <p class='mx-1 my-1' style="color:coral;">Hello, <%= user.name %></p> 
+      <p class='mx-1 my-1' style="color:#116fd2;">Hello, <%= user.name %></p> 
       <a class="btn btn-outline-primary my-2 my-sm-0" href="/auth/logout">Logout</a>
     <% } else { %>
     <a class="btn btn-outline-primary my-2 my-sm-0" href="/auth/google">Login</a>
