--- a/views/savedPo.ejs
+++ b/views/savedPo.ejs
@@ -34,6 +34,7 @@
                 <th scope="col">Indent No</th>
                 <th scope="col">Date Prepared</th>
                 <th scope="col">File No</th>
+                <th scope="col">View this PO</th>
                 <th scope="col">Workon</th>
               </tr>
             </thead>
@@ -45,6 +46,7 @@
                 <td><%=po.indentNo %></td>
                 <td><%=po.datePrepared %></td>
                 <td><%=po.fileNo %></td>
+                <td><button type="button" class="btn btn-outline-info" data-toggle="modal" data-target="#exampleModal" data-whatever="<%= po.fileName %>">View</button></td>
                 <td><a class="btn btn-outline-primary" href="/confirmationPage/<%= po._id %>">Edit</a></td>
               </tr>
            <% }); %>
@@ -55,8 +57,60 @@
             <% } %>
         </div>
     </main>
-    
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">View PO</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <!-- <form>
+              <div class="form-group">
+                <label for="recipient-name" class="col-form-label">Recipient:</label>
+                <input type="text" class="form-control" id="recipient-name">
+              </div>
+              <div class="form-group">
+                <label for="message-text" class="col-form-label">Message:</label>
+                <textarea class="form-control" id="message-text"></textarea>
+              </div>
+            </form> -->
+            <canvas id="target-section" height="100px" width="100px">
+              <p>PO Here</p>
+            </canvas>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-outline-secondary" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
     <%- include('./common/footer') %>
-    
+    <script src="//mozilla.github.io/pdf.js/build/pdf.js"></script>
+    <script>
+      pdfjsLib.GlobalWorkerOptions.workerSrc = '//mozilla.github.io/pdf.js/build/pdf.worker.js';
+      $('#exampleModal').on('show.bs.modal', function (event) {
+        var button = $(event.relatedTarget) // Button that triggered the modal
+        var recipient = button.data('whatever') // Extract info from data-* attributes
+        var url = '/uploads/'+recipient;
+        pdfjsLib.getDocument(url).promise.then(function getPdfHelloWorld(pdf) {
+          pdf.getPage(pdf.numPages-2).then(function getPageHelloWorld(page) {
+            var scale = 1.3;
+            var viewport = page.getViewport({scale});
+            var canvas = document.getElementById('target-section');
+            var context = canvas.getContext('2d');
+            
+            canvas.height = viewport.height;
+            canvas.width = viewport.width;
+            page.render({canvasContext: context, viewport: viewport});
+          });
+        });
+        // var modal = $(this)
+        // modal.find('.modal-title').text('New message to ' + recipient)
+        // modal.find('.modal-body input').val(recipient)
+      })
+    </script>
   </body>
 </html>
