Add Auto Drive Upload

--- a/views/confirmationPage.ejs
+++ b/views/confirmationPage.ejs
@@ -197,7 +197,7 @@
                 </div>
                 <div class="mb-3">
                     <label for="remarks"> Remarks <span class="text-muted">(Optional)</span></label>
-                    <input type="text" class="form-control" id="remarks" placeholder="" name="remarks" >
+                    <input type="text" class="form-control" id="remarks" placeholder="" name="remarks" value="<%= formData.remarks %>">
                 </div>
                 <hr class="mb-4">
                 <div class="row">
