--- a/views/common/navbar.ejs
+++ b/views/common/navbar.ejs
@@ -12,10 +12,10 @@
         <li class="nav-item active">
           <a class="nav-link" href="/"> Home <span class="sr-only">(current)</span></a>
         </li>
-        <!-- <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
         <li class="nav-item">
+          <a class="nav-link" href="/help">Getting Started</a>
+        </li>
+        <!-- <li class="nav-item">
           <a class="nav-link disabled" href="#">Disabled</a>
         </li> -->
       </ul>
