toggle text area

--- a/views/uploadPage.ejs
+++ b/views/uploadPage.ejs
@@ -16,6 +16,9 @@
               <input type="file" name="myFile" class="drop-zone__input" required>
             </div>    
             <br>
+            <button class="btn btn-outline-primary mx-auto" onclick="toggleTextBox()">Toggle Text Area</button>
+            <br>
+            <br>
             <input type="submit" class="btn btn-outline-primary mx-auto " value="Submit">
           </form>
         </div> 
