--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -15,9 +15,20 @@ body > .container {
   margin-left:355px;
   margin-top:20px;
 } */
+.container{
+  margin-top:0px;
+}
+textarea{
+  height:300px;
+  width:300px;
+  color:black;
+  border: 4px solid grey;
+  border-radius: 10px;
+  font-size: 20px;
+}
 .drop-zone {
-  max-width: 200px;
-  height: 200px;
+  max-width: 300px;
+  height: 300px;
   padding: 25px;
   display: flex;
   align-items: center;
