--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -20,14 +20,15 @@ body > .container {
 }
 textarea{
   height:300px;
-  width:300px;
+  width: 300px;
   color:black;
   border: 4px solid grey;
   border-radius: 10px;
   font-size: 20px;
+  padding:3px;
 }
 .drop-zone {
-  max-width: 300px;
+  width:300px;
   height: 300px;
   padding: 25px;
   display: flex;
