--- a/views/confirmationPage.ejs
+++ b/views/confirmationPage.ejs
@@ -23,7 +23,7 @@
         <div class="row">
             <div class="col-md-5 order-md-2 mb-4">
                 <h4 class="mb-3">Preview</h4>
-                <iframe src="/uploads/<%= formData.fileName %>" class='w-100 h-75 my-4'></iframe>
+                <iframe src="/uploads/<%= formData.fileName %>" class='w-100 h-75 my-4 sticky-top'></iframe>
             </div>
             <div class="col-md-7 order-md-1">
             <h4 class="mb-3">Purchase Order Details <span class='text-muted'>( <span style="color:red;"><strong>*</strong></span> ) <em>Validation Needed</em></span></h4>
