Made frontend Changes

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -98,7 +98,8 @@ code {
   }
   #dock-container li img {
     position:relative;
-    height: auto;
+    height: 10rem;
+    width: 10rem;
               -webkit-gradient: (linear, left top, left bottom, from(transparent),
               color-stop(0.7, transparent), to(rgba(255,255,255,.5)));
     -webkit-transition: all 0.3s;
