--- a/views/index.ejs
+++ b/views/index.ejs
@@ -49,6 +49,10 @@
               <span>View Saved PO</span>
               <a href="/savedPOPage"><img src="images/dv.png"/></a>
             </li>
+            <li>
+              <span>Batch Upload PO</span>
+              <a href="#"><img src="images/batchup.png" alt=""></a>
+            </li>
           </ul>
         </div>
         
