--- a/views/uploadPage.ejs
+++ b/views/uploadPage.ejs
@@ -15,7 +15,7 @@
               <span class="drop-zone__prompt">Drop file here or click to upload</span>
               <input type="file" name="myFile" class="drop-zone__input" required>
             </div>    
-            <input type="submit" class="btn btn-outline-primary mx-auto w-50 my-2" value="Submit">
+            <input type="submit" class="btn btn-outline-primary mx-auto my-2" value="Submit" style="width:48%;">
             <button class="btn btn-outline-primary mx-auto w-50 my-2" onclick="toggleTextBox(this)">Text Detect: ON</button>
           </form>
         </div> 
