Add Batch Upload, Sorting, Delete functions

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -51,7 +51,7 @@
             </li>
             <li>
               <span>Batch Upload PO</span>
-              <a href="#"><img src="images/batchup.png" alt=""></a>
+              <a href="/batchUpload"><img src="images/batchup.png" alt=""></a>
             </li>
           </ul>
         </div>
