--- a/views/common/head.ejs
+++ b/views/common/head.ejs
@@ -13,6 +13,7 @@
 
     <!-- Bootstrap core CSS -->
     <link href="/stylesheets/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
         html {
             position: relative;
