--- a/views/common/navbar.ejs
+++ b/views/common/navbar.ejs
@@ -22,9 +22,9 @@
     </div>
     <% if(user) { %>
       <p class='mx-1 my-1' style="color:#116fd2;">Hello, <%= user.name %></p> 
-      <a class="btn btn-outline-primary my-2 my-sm-0" href="/auth/logout">Logout</a>
+      <a class="btn btn-outline-primary my-2 my-sm-0" href="/users/logout">Logout</a>
     <% } else { %>
-    <a class="btn btn-outline-primary my-2 my-sm-0" href="/auth/google">Login</a>
+    <a class="btn btn-outline-primary my-2 my-sm-0" href="/users/login">Login</a>
     <% } %>
   </div>
   </nav>
